hphp/hack/test/typecheck/class_const_already_bound.php.rust_elab.exp
File "class_const_already_bound.php", line 5, characters 3-16:
Cannot redeclare `Foo::bar` (Parsing[1002])
File "class_const_already_bound.php", line 5, characters 9-15:
Cannot redeclare `Foo::bar` (Parsing[1002])
File "class_const_already_bound.php", line 5, characters 9-11:
Name already bound: `bar` (Naming[2012])
  File "class_const_already_bound.php", line 4, characters 9-11:
  Previous definition is here
File "class_const_already_bound.php", line 5, characters 9-11:
Argument already bound: `bar` (Naming[2036])
